err/bustools.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bustools'...
Listing './lib/python3.5/site-packages/bustools/adapters'...
Compiling './lib/python3.5/site-packages/bustools/adapters/aardvark.py'...
***   File "./lib/python3.5/site-packages/bustools/adapters/aardvark.py", line 43
    print "%d device(s) found:" % len(devices)
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bustools/devices'...
Compiling './lib/python3.5/site-packages/bustools/devices/ina219.py'...
***   File "./lib/python3.5/site-packages/bustools/devices/ina219.py", line 57
    print "Shunt Voltage: {0}V".format(shunt_voltage)
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bustools/devices/lm75.py'...
***   File "./lib/python3.5/site-packages/bustools/devices/lm75.py", line 131
    print "%.2f" % temp + deg + 'F'
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/bustools/platforms'...
Listing './lib/python3.5/site-packages/bustools/platforms/totalphase'...
Listing './lib/python3.5/site-packages/bustools-0.1.0.dev2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
